--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,7 +17,8 @@
     font-style: normal;
     font-weight: 700;
     font-size: 21px;
-    line-height: 25px;
+    line-height: 0px;
+    padding-bottom: 2px;
     color: #FF6B00;
     background-color: white;
 }
@@ -33,7 +34,7 @@
     justify-content: center;
     align-items: center;
     z-index: 90;
-    background-color:white;
+    background-color:(0, 0, 0, 0);
 }
 .menu-btn span,
 .menu-btn span:before,
@@ -47,10 +48,10 @@
     position: absolute;
 }
 .menu-btn span:before {
-    bottom: 8px;
+    bottom: 6px;
 }
 .menu-btn span:after {
-    top: 8px;
+    top: 6px;
 }
 
 #menu-btn-check:checked ~ .menu-btn span {
@@ -105,7 +106,7 @@
 
 .menu-content {
     width: 100%;
-    height: 100%;
+    height: 300%;
     position: absolute;
     top: 0;
     left: 100%;/*leftの値を変更してメニューを画面外へ*/
